--- a/shistorial.html
+++ b/shistorial.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="es">
 <head>
-  <meta charset="utf-8"/>
+  <meta charset="utf-8">
   <title>Historial</title>
   <link rel="stylesheet" href="styles.css">
 </head>
@@ -16,13 +16,10 @@
   <div id="histList" class="list"></div>
 </main>
 
+<!-- SUPABASE -->
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.39.7/dist/umd/supabase.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/tesseract.js@2.1.5/dist/tesseract.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.16.105/pdf.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/xlsx/dist/xlsx.full.min.js"></script>
 
-<script src="js/ocr.js"></script>
-<script src="js/excel.js"></script>
+<!-- MAIN -->
 <script src="main.js"></script>
 </body>
 </html>
