--- a/jdashboard.html
+++ b/jdashboard.html
@@ -2,44 +2,35 @@
 <html lang="es">
 <head>
   <meta charset="utf-8">
-  <title>Dashboard</title>
+  <title>Dashboard – Gastos</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
-<header class="header">
-  <h1>Dashboard</h1>
-  <nav>
-    <a href="reporte.html" class="btn-outline">Nuevo reporte</a>
-    <button id="btnSignOut" class="btn-outline">Salir</button>
-  </nav>
+<header>
+  <h2>Dashboard</h2>
+  <a href="reportes.html">Reportes</a>
 </header>
 
 <main class="container">
-  <div class="totales-grid">
-    <div class="total-card">
-      <small>Total gastado</small>
-      <strong id="kpiTotal">$0</strong>
-    </div>
-    <div class="total-card">
-      <small>Reportes</small>
-      <strong id="kpiReportes">0</strong>
-    </div>
-  </div>
 
-  <canvas id="graficaGastos" height="120"></canvas>
+<div class="kpis">
+  <div class="kpi">Total Gastado<br><strong id="kpiTotal">$0</strong></div>
+  <div class="kpi">Mayor Concepto<br><strong id="kpiConcepto">-</strong></div>
+</div>
 
-  <h3>Mis reportes</h3>
-  <div id="dashReportesList" class="list"></div>
+<canvas id="chartGastos" height="120"></canvas>
+
 </main>
 
-<!-- SUPABASE -->
+<!-- LIBRERÍAS -->
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.39.7/dist/umd/supabase.min.js"></script>
-
-<!-- CHART (OBLIGATORIO PARA DASHBOARD) -->
+<script src="https://cdn.jsdelivr.net/npm/tesseract.js@2.1.5/dist/tesseract.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/xlsx/dist/xlsx.full.min.js"></script>
 
-<!-- MAIN -->
+<script src="js/ocr.js"></script>
+<script src="js/excel.js"></script>
 <script src="main.js"></script>
 </body>
 </html>
