--- a/shistorial.html
+++ b/shistorial.html
@@ -2,24 +2,34 @@
 <html lang="es">
 <head>
   <meta charset="utf-8">
-  <title>Historial</title>
+  <title>Historial de Reportes</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
-<header class="header">
-  <h1>Historial</h1>
-  <a href="jdashboard.html" class="btn-outline">Dashboard</a>
+<header>
+  <h2>Historial de Reportes</h2>
+  <nav>
+    <a href="reportes.html">Nuevo reporte</a>
+    <a href="dashboard.html">Dashboard</a>
+  </nav>
 </header>
 
 <main class="container">
-  <div id="histList" class="list"></div>
+  <section class="card">
+    <h3>Mis reportes</h3>
+    <div id="listaReportes"></div>
+  </section>
 </main>
 
-<!-- SUPABASE -->
+<!-- LIBRERÍAS (OBLIGATORIAS) -->
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.39.7/dist/umd/supabase.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/tesseract.js@2.1.5/dist/tesseract.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/xlsx/dist/xlsx.full.min.js"></script>
 
-<!-- MAIN -->
+<script src="js/ocr.js"></script>
+<script src="js/excel.js"></script>
 <script src="main.js"></script>
 </body>
 </html>
