--- a/reporte.html
+++ b/reporte.html
@@ -10,7 +10,7 @@
 <header>
   <h2>Nuevo Reporte</h2>
   <nav>
-    <a href="dashboard.html">Dashboard</a>
+    <a href="jdashboard.html">Dashboard</a>
     <button id="btnLogout">Salir</button>
   </nav>
 </header>
