--- a/shistorial.html
+++ b/shistorial.html
@@ -11,7 +11,7 @@
   <h2>Historial de Reportes</h2>
   <nav>
     <a href="reportes.html">Nuevo reporte</a>
-    <a href="dashboard.html">Dashboard</a>
+    <a href="jdashboard.html">Dashboard</a>
   </nav>
 </header>
 
