--- a/shistorial.html
+++ b/shistorial.html
@@ -1,35 +1,62 @@
 <!doctype html>
 <html lang="es">
 <head>
-  <meta charset="utf-8">
-  <title>Historial de Reportes</title>
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <title>Historial de Reportes — Comprobación de Gastos</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
-<header>
-  <h2>Historial de Reportes</h2>
-  <nav>
-    <a href="reportes.html">Nuevo reporte</a>
-    <a href="jdashboard.html">Dashboard</a>
-  </nav>
-</header>
+  <!-- HEADER -->
+  <header class="header">
+    <h1>Historial de reportes</h1>
+    <nav>
+      <a href="jdashboard.html" class="btn-outline">Dashboard</a>
+      <a href="reporte.html" class="btn-outline">Nuevo reporte</a>
+      <button id="btnSignOut3" class="btn-outline">Salir</button>
+    </nav>
+  </header>
 
-<main class="container">
-  <section class="card">
-    <h3>Mis reportes</h3>
-    <div id="listaReportes"></div>
-  </section>
-</main>
+  <!-- CONTENIDO -->
+  <main class="container">
 
-<!-- LIBRERÍAS (OBLIGATORIAS) -->
-<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.39.7/dist/umd/supabase.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/tesseract.js@2.1.5/dist/tesseract.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/xlsx/dist/xlsx.full.min.js"></script>
+    <section class="card">
+      <h2>Mis reportes</h2>
 
-<script src="js/ocr.js"></script>
-<script src="js/excel.js"></script>
-<script src="main.js"></script>
+      <!-- FILTROS (placeholder, no rompe nada) -->
+      <div class="actions" style="margin-bottom:12px">
+        <button id="btnFiltrar" class="btn-outline">
+          Filtrar (próximamente)
+        </button>
+      </div>
+
+      <!-- LISTADO -->
+      <div id="histList" class="list">
+        <!-- main.js renderHistorial() pinta aquí -->
+      </div>
+    </section>
+
+  </main>
+
+  <!-- ================= LIBRERÍAS OBLIGATORIAS ================= -->
+
+  <!-- Supabase -->
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.39.7/dist/umd/supabase.min.js"></script>
+
+  <!-- Chart (no se usa aquí, pero main.js la puede requerir) -->
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
+  <!-- Excel -->
+  <script src="https://cdn.jsdelivr.net/npm/xlsx/dist/xlsx.full.min.js"></script>
+
+  <!-- OCR (no se usa aquí, pero main.js la referencia) -->
+  <script src="https://cdn.jsdelivr.net/npm/tesseract.js@2.1.5/dist/tesseract.min.js"></script>
+
+  <!-- ================= APP ================= -->
+  <script src="js/ocr.js"></script>
+  <script src="js/excel.js"></script>
+  <script src="main.js"></script>
+
 </body>
 </html>
