--- a/reporte.html
+++ b/reporte.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
+<body data-auth="true">
 <header>
   <h2>Nuevo Reporte</h2>
   <nav>
