--- a/jdashboard.html
+++ b/jdashboard.html
@@ -1,37 +1,55 @@
 <!doctype html>
 <html lang="es">
 <head>
-  <meta charset="utf-8">
-  <title>Dashboard – Gastos</title>
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width,initial-scale=1"/>
+  <title>Dashboard — Gastos</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <body data-auth="true">
+  <header class="header">
+    <div>
+      <h1>Dashboard de Gastos</h1>
+      <p class="subtitle">Tendencia mensual y análisis por categoría</p>
+    </div>
+    <nav>
+      <span id="userName" class="muted"></span>
+      <a class="btn-yellow" href="reporte.html">Nuevo reporte</a>
+      <a class="btn-outline" href="historial.html">Historial</a>
+      <button id="btnSignOut" class="btn-outline">Salir</button>
+    </nav>
+  </header>
 
-<header>
-  <h2>Dashboard</h2>
-  <a href="reportes.html">Reportes</a>
-</header>
+  <main class="container">
+    <section class="card">
+      <h2>Histórico de gastos por mes</h2>
+      <canvas id="graficaGastos" height="120"></canvas>
+    </section>
 
-<main class="container">
+    <section class="card">
+      <h2>Categoría con mayor gasto (último año)</h2>
+      <p id="categoriaMayor" class="big-text">—</p>
+    </section>
 
-<div class="kpis">
-  <div class="kpi">Total Gastado<br><strong id="kpiTotal">$0</strong></div>
-  <div class="kpi">Mayor Concepto<br><strong id="kpiConcepto">-</strong></div>
-</div>
+    <section class="card">
+      <h2>Exportaciones</h2>
+      <div class="actions">
+        <button id="btnExportDashboard" class="btn-blue">Exportar dashboard a Excel</button>
+      </div>
+    </section>
 
-<canvas id="chartGastos" height="120"></canvas>
+    <section class="card">
+      <h2>Reportes recientes</h2>
+      <div id="dashReportesList" class="list"></div>
+    </section>
+  </main>
 
-</main>
+  <!-- libs -->
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js/dist/umd/supabase.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/tesseract.js@2.1.5/dist/tesseract.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/xlsx/dist/xlsx.full.min.js"></script>
 
-<!-- LIBRERÍAS -->
-<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.39.7/dist/umd/supabase.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/tesseract.js@2.1.5/dist/tesseract.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/xlsx/dist/xlsx.full.min.js"></script>
-
-<script src="js/ocr.js"></script>
-<script src="js/excel.js"></script>
-<script src="main.js"></script>
+  <script src="main.js"></script>
 </body>
 </html>
