--- a/jdashboard.html
+++ b/jdashboard.html
@@ -15,7 +15,7 @@
     <nav>
       <span id="userName" class="muted"></span>
       <a class="btn-yellow" href="reporte.html">Nuevo reporte</a>
-      <a class="btn-outline" href="shistorial.html">Historial</a>
+      <a class="btn-outline" href="historial.html">Historial</a>
       <button id="btnSignOut" class="btn-outline">Salir</button>
     </nav>
   </header>
@@ -44,6 +44,7 @@
     </section>
   </main>
 
+ 
   <!-- libs -->
 <!-- Supabase -->
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.39.7/dist/umd/supabase.min.js"></script>
