--- a/index.html
+++ b/index.html
@@ -1,14 +1,12 @@
 <!doctype html>
 <html lang="es">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Comprobación de Gastos — Login</title>
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width,initial-scale=1"/>
+  <title>Login — Comprobación de Gastos</title>
   <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-
   <main class="auth-container">
     <div class="auth-card">
       <h1>Comprobación de Gastos</h1>
@@ -20,30 +18,30 @@
       </div>
 
       <div id="formSignIn" class="auth-form">
-        <input id="siEmail" type="email" placeholder="Correo">
-        <input id="siPassword" type="password" placeholder="Contraseña">
+        <input id="siEmail" type="email" placeholder="Correo" />
+        <input id="siPassword" type="password" placeholder="Contraseña" />
         <button id="btnSignIn" class="btn-blue">Entrar</button>
       </div>
 
       <div id="formSignUp" class="auth-form" style="display:none;">
-        <input id="suName" placeholder="Nombre completo">
-        <input id="suEmail" type="email" placeholder="Correo">
-        <input id="suPassword" type="password" placeholder="Contraseña">
+        <input id="suName" placeholder="Nombre completo" />
+        <input id="suEmail" type="email" placeholder="Correo" />
+        <input id="suPassword" type="password" placeholder="Contraseña" />
         <button id="btnSignUp" class="btn-blue">Registrar</button>
+      </div>
+
+      <div style="margin-top:12px;text-align:center">
+        <a href="dashboard.html" class="btn-outline">Probar sin login (demo)</a>
       </div>
     </div>
   </main>
+
   <!-- libs -->
-<!-- Supabase -->
-<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.39.7/dist/umd/supabase.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js/dist/umd/supabase.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/tesseract.js@2.1.5/dist/tesseract.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/xlsx/dist/xlsx.full.min.js"></script>
 
-
-
-<!-- Tu código -->
-
-<script src="main.js"></script>
-</body>
-</html>
-
+  <script src="main.js"></script>
 </body>
 </html>
