--- a/index.html
+++ b/index.html
@@ -1,54 +1,29 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width,initial-scale=1"/>
-  <title>Login — Comprobación de Gastos</title>
-  <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8" />
+  <title>Gestión de Gastos</title>
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-  <main class="auth-container">
-    <div class="auth-card">
-      <h1>Comprobación de Gastos</h1>
-      <p class="muted">Inicia sesión o crea una cuenta</p>
 
-      <div class="tabs-auth">
-        <button id="tabSignIn" class="tab-auth active">Entrar</button>
-        <button id="tabSignUp" class="tab-auth">Registrar</button>
-      </div>
+  <main class="login-card">
+    <h2>Acceso</h2>
 
-      <div id="formSignIn" class="auth-form">
-        <input id="siEmail" type="email" placeholder="Correo" />
-        <input id="siPassword" type="password" placeholder="Contraseña" />
-        <button id="btnSignIn" class="btn-blue">Entrar</button>
-      </div>
-
-      <div id="formSignUp" class="auth-form" style="display:none;">
-        <input id="suName" placeholder="Nombre completo" />
-        <input id="suEmail" type="email" placeholder="Correo" />
-        <input id="suPassword" type="password" placeholder="Contraseña" />
-        <button id="btnSignUp" class="btn-blue">Registrar</button>
-      </div>
-
-      <div style="margin-top:12px;text-align:center">
-        <a href="jdashboard.html" class="btn-outline">Probar sin login (demo)</a>
-      </div>
-    </div>
+    <input id="siEmail" type="email" placeholder="Correo" />
+    <input id="siPassword" type="password" placeholder="Contraseña" />
+    <button id="btnSignIn">Ingresar</button>
   </main>
 
-<!-- Supabase -->
-<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.39.7/dist/umd/supabase.min.js"></script>
+  <!-- LIBRERÍAS (ORDEN CRÍTICO) -->
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.39.7/dist/umd/supabase.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/tesseract.js@2.1.5/dist/tesseract.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/xlsx/dist/xlsx.full.min.js"></script>
 
-<!-- OCR -->
-<script src="https://cdn.jsdelivr.net/npm/tesseract.js@2.1.5/dist/tesseract.min.js"></script>
+  <!-- TU CÓDIGO -->
+  <script src="js/ocr.js"></script>
+  <script src="js/excel.js"></script>
+  <script src="main.js"></script>
 
-<!-- Excel -->
-<script src="https://cdn.jsdelivr.net/npm/xlsx/dist/xlsx.full.min.js"></script>
-
-<!-- Tu código -->
-<script src="js/ocr.js"></script>
-<script src="js/excel.js"></script>
-<script src="main.js"></script>
 </body>
 </html>
-
